# QA_assistant

./: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  docker-entrypoint.sh  docker-ingest.sh  docker.ps1  main.py  monitoring.py  pyproject.toml  requirements.txt  test_api.ps1  test_questions.json
agents/: rag.py
api/: __init__.py  client.py  server.py
chroma_db/: chroma.sqlite3
memory/: embeddings.py  vectorstore.py
tools/: business_api.py  search.py
