[project]
name = "qa-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "pypdf>=6.11.0",
    "uvicorn>=0.47.0",
]
